@@ -132,8 +132,24 @@
           </listitem>
 
           <listitem>
-            <para>The 'refresh' command is now synonymous with
-            'restart'.</para>
+            <para>The 'refresh' command is now similar to restart with the
+            exceptios that:</para>
+
+            <itemizedlist>
+              <listitem>
+                <para>The command fails if Shorewall is not running.</para>
+              </listitem>
+
+              <listitem>
+                <para>A directory name cannot be specified in the
+                command.</para>
+              </listitem>
+
+              <listitem>
+                <para>The refresh command does not alter the Netfilter
+                configuration except for the static blacklist.</para>
+              </listitem>
+            </itemizedlist>
           </listitem>
 
           <listitem>
@@ -173,7 +189,7 @@
 
                       <entry>initdone</entry>
 
-                      <entry>refresh</entry>
+                      <entry></entry>
                     </row>
 
                     <row>
