@@ -101,8 +101,8 @@
 
     <listitem>
       <para>refresh -- invoked while the firewall is being refreshed but
-      before the blacklst chains have been rebuilt (Not used by Shorewall
-      Perl).</para>
+      before the blacklst chains have been rebuilt (Note: Shorewall-perl does
+      not rebuild the blacklist during <command>refresh</command>).</para>
     </listitem>
 
     <listitem>
@@ -366,7 +366,7 @@
 
                 <entry>initdone</entry>
 
-                <entry>refresh</entry>
+                <entry></entry>
               </row>
 
               <row>
