@@ -14,6 +14,8 @@ Changes in 4.0.0 RC 1
 
 7)  Work around SELinux nonsense.
 
+8)  Restore the 'refresh' command.
+
 Changes in 4.0.0 Beta 6
 
 1)  First step to adding compiler debugging facility.
